--- a/src/styles/FeedPage.scss
+++ b/src/styles/FeedPage.scss
@@ -154,7 +154,7 @@
 }
 
 .card-about__title {
-  margin-bottom: $component-margin;
+  margin: $component-margin 0;
   font-size: 1.3rem;
 }
 
